tests/fail/generic_morphic_fail.stderr
error[E0604]: Cannot pass pointer type to rigid generic parameter 'T', use 'T' with single quote prefix if pointer is expected
 --> tests/fail/generic_morphic_fail.tk:2:7
  |
 2 | shape RigidBox<T>(data: T)
  |       ^
error[E0416]: Unknown shape type 'RigidBox<^i32>'
 --> tests/fail/generic_morphic_fail.tk:6:16
  |
 6 |     auto val = RigidBox<^i32>(^data=new i32(42))
  |                ^
